package satelliteservice.domain.enums;

public enum SatelliteType {
    SENTINEL_1,
    SENTINEL_2
}
