package stmodelservice.domain.enums;

public enum MetricType {
    NDWI_MEAN,
    MNDWI_MEAN,
    WATER_COVERAGE_PERCENT,
    TURBIDITY_INDEX,
    OTHER
}
